# MatrixFlatten

./: .gitignore  CMakeLists.txt  README.md
MatrixLib/: CMakeLists.txt
MatrixLib/include/matlib/: matrix_1d.h  matrix_3d.h  vector_1d.h
MatrixLib/src/: matrix_1d.cpp  matrix_3d.cpp  vector_1d.cpp
MatrixLibTests/: CMakeLists.txt
MatrixLibTests/src/: matrix_1d_test.cpp  matrix_3d_test.cpp  vector_1d_test.cpp
